# radio-ad-sensing-pipeline

./: .dockerignore  .env.example  .gitignore  .hermes.md  AGENTS.md  API_CONTRACT.md  CLAUDE.md  CODEX.md  GROK.md  LESSONS_LEARNED.md  PROJECT_STRUCTURE_FOR_BOLT_DASHBOARD.md  README.md  RUNBOOK.md  TASKS.md  WATCHDOG_REQUIREMENTS.md  docker-compose.prod.yml  docker-compose.windows-dev.yml  docker-compose.worker2.yml  docker-compose.yml  ffmpeg_error_summary.md  final-install-list.md  pyproject.toml  recommended_keep_pause_rotate.csv  station_health_report.md
.cursor/: hooks.json  mcp.json  settings.json
.githooks/: post-commit
.projectmem/: AI_INSTRUCTIONS.md  PROJECT_MAP.md  config.toml  events.jsonl  summary.md
.serena/: project.yml
.taskmaster/: config.json  state.json
.understand-anything/: .graph-stale  .understandignore  config.json  fingerprints.json  knowledge-graph.json  meta.json
agent-tools/: d5cadfaa-3737-4872-bfd3-05e828bb36bd.txt  ed12601e-76d4-4c38-bb1a-ca0f16d3e1fb.txt
alerter/: Dockerfile  __main__.py  hit_advertiser.py  novelty_reporter.py  service.py
backups/: station-pool-pre-reconcile-guard-25690623-055748.json  stations-enabled-pre-reconcile-25690623-055154.json  worker-scale-audit-25690623-031920.md
collectors/: __init__.py  __main__.py  auto_approve.py  cfpb_api_client.py  cfpb_complaints_collector.py  cfpb_csv_reader.py
config/: agent-memory-contract.md  cfpb_collector.yaml  consumer_personal_loan_taxonomy.yaml  excluded_verticals.yaml  harvest_profiles.yaml  justia_loan_queries.txt  justia_name_queries.txt  loan_keywords.yaml  (+9 more)
(+701 files in other folders)
