[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "radio-ad-sensing-pipeline"
version = "0.1.0"
description = "Local 24/7 radio ad-sensing pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "prometheus-client>=0.20",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.25",
]
dashboard = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]
worker = [
    "faster-whisper>=1.0",
    "rapidfuzz>=3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["shared", "ingestor", "worker", "alerter", "dashboard", "monitoring", "collectors"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
